Grace/tests/gibbs/errors/t187.grace
// ERROR = P1033
method [n] {
    print(n)
}
